--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,11 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
+    "scripts-descriptions": {
+        "test": "Run all tests."
     }
 }
